vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_inline_wait_tags.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- Dialogue:
    speaker: ~
    content: 倒计时：三、二、一！
    inline_effects:
      - position: 6
        kind:
          Wait: 1
      - position: 8
        kind:
          Wait: 1
    no_wait: false
