vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_narration.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- Dialogue:
    speaker: ~
    content: 这是旁白文本。
    inline_effects: []
    no_wait: false
