vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_show_character.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- ShowCharacter:
    path: char/royu.png
    alias: royu
    position: NearMiddle
    transition:
      name: dissolve
      args: []
